# FastAPI-study

./: main.py  pyproject.toml
