[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend API"
authors = ["김현준C <hyunjun_kim@pubg.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.8.2"
emails = "^0.6"
raven = "^6.10.0"
Jinja2 = "^3.0.1"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
SQLAlchemy = "^1.4.25"
pytest = "^6.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.19.0"
aiofiles = "^0.7.0"
elasticsearch = {extras = ["async"], version = "^7.15.0"}
boto3 = "^1.18.58"
snowflake-connector-python = "^2.6.2"
ddtrace = "^0.54.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
